    <https://github.com/jhy/jsoup/issues/985>

  * Bugfix: when using the XML Parser set to lowercase normalize tags, uppercase closing tags were not correctly
    handled.
    <https://github.com/jhy/jsoup/issues/998>

  * Bugfix: when parsing from a URL, an end tag could be read incorrectly if it started on a buffer boundary.
      <https://github.com/jhy/jsoup/issues/995>

*** Release 1.11.2 [2017-Nov-19]
  * Improvement: added a new pseudo selector :matchText, which allows text nodes to match as if they were elements.
    This enables finding text that is only marked by a "br" tag, for example.
    <https://github.com/jhy/jsoup/issues/550>

  * Change: marked Connection.validateTLSCertificates() as deprecated.

  * Improvement: normalize invisible characters (like soft-hyphens) in Element.text().
    <https://github.com/jhy/jsoup/issues/978>

  * Improvement: added Element.wholeText(), to easily get the un-normalized text value of an element and its children.
    <https://github.com/jhy/jsoup/pull/564>
    
  * Bugfix: in a deep DOM stack, a StackOverFlow exception could occur when generating implied end tags.
    <https://github.com/jhy/jsoup/issues/966>

  * Bugfix: when parsing attribute values that happened to cross a buffer boundary, a character was dropped.
    <https://github.com/jhy/jsoup/issues/967>

  * Bugfix: fixed an issue that prevented using infinite timeouts in Jsoup.Connection.
    <https://github.com/jhy/jsoup/issues/968>

  * Bugfix: whitespace preserving tags were not honoured when nested deeper than two levels deep.
    <https://github.com/jhy/jsoup/issues/722>

  * Bugfix: an unterminated comment token at the end of the HTML input would cause an out of bounds exception.
    <https://github.com/jhy/jsoup/issues/972>

  * Bugfix: an NPE in the Cleaner which would occur if an <a href> attribute value was missing.
    <https://github.com/jhy/jsoup/issues/973>
