@@ -2,7 +2,7 @@ package org.jsoup;
 
 import java.io.IOException;
 
-public class UncheckedIOException extends Error {
+public class UncheckedIOException extends RuntimeException {
     public UncheckedIOException(IOException cause) {
         super(cause);
     }
