@@ -31,6 +31,11 @@ jsoup changelog
   * Bugfix: when parsing from a URL, an end tag could be read incorrectly if it started on a buffer boundary.
       <https://github.com/jhy/jsoup/issues/995>
 
+  * Bugfix: when parsing from a URL, if the remote server failed to complete its write (i.e. it writes less than the
+    Content Length header promised on a gzipped stream), the parse method would incorrectly throw an unchecked
+    exception. It now throws the declared IOException.
+      <https://github.com/jhy/jsoup/issues/980>
+
 *** Release 1.11.2 [2017-Nov-19]
   * Improvement: added a new pseudo selector :matchText, which allows text nodes to match as if they were elements.
     This enables finding text that is only marked by a "br" tag, for example.
